--- a/package.json
+++ b/package.json
@@ -22,15 +22,16 @@
   },
   "homepage": "https://github.com/edvardchen/grpc-test-helper#readme",
   "devDependencies": {
+    "@types/lodash": "^4.14.149",
+    "@types/node": "^12.0.8",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
-    "eslint-config-prettier": "^4.3.0",
-    "typescript": "^3.7.4",
-    "@types/node": "^12.0.8",
     "eslint": "^5.9.0",
-    "prettier": "^1.18.2",
+    "eslint-config-prettier": "^4.3.0",
+    "husky": "^1.2.0",
     "lint-staged": "^8.1.0",
-    "husky": "^1.2.0"
+    "prettier": "^1.18.2",
+    "typescript": "^3.7.4"
   },
   "lint-staged": {
     "*.{tsx,ts}": [
@@ -45,5 +46,10 @@
     "hooks": {
       "pre-commit": "lint-staged"
     }
+  },
+  "dependencies": {
+    "@grpc/proto-loader": "^0.5.3",
+    "grpc": "^1.24.2",
+    "lodash": "^4.17.15"
   }
 }
