--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.1-0",
   "description": "",
   "main": "lib/index.js",
+  "files": [
+    "lib"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepublish": "npm run build",
