--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lib"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "prepublish": "npm run build",
     "build": "tsc",
     "lint": "eslint src && tsc --noEmit",
@@ -25,15 +25,19 @@
   },
   "homepage": "https://github.com/edvardchen/grpc-test-helper#readme",
   "devDependencies": {
+    "@types/jest": "^25.1.3",
     "@types/lodash": "^4.14.149",
     "@types/node": "^12.0.8",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
     "eslint": "^5.9.0",
     "eslint-config-prettier": "^4.3.0",
+    "google-protobuf": "^3.11.4",
     "husky": "^1.2.0",
+    "jest": "^25.1.0",
     "lint-staged": "^8.1.0",
     "prettier": "^1.18.2",
+    "ts-jest": "^25.2.1",
     "typescript": "^3.7.4"
   },
   "lint-staged": {
