--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "homepage": "https://github.com/edvardchen/grpc-test-helper#readme",
   "devDependencies": {
+    "@grpc/proto-loader": "^0.5.5",
+    "@grpc/grpc-js": "^1.1.7",
     "@types/jest": "^25.1.3",
     "@types/lodash": "^4.14.149",
     "@types/node": "^12.0.8",
@@ -54,9 +56,11 @@
       "pre-commit": "lint-staged"
     }
   },
+  "peerDependencies": {
+    "@grpc/proto-loader": "^0.5.5",
+    "@grpc/grpc-js": "^1.1.7"
+  },
   "dependencies": {
-    "@grpc/proto-loader": "^0.5.3",
-    "grpc": "^1.24.2",
     "lodash": "^4.17.15"
   }
 }
